syntax = "proto3";
package pong;

message Empty {}

message UserName{
  string username = 1;
}

message UserNameMessage {
  string player_1_username = 1;
  string player_2_username = 2;
}

message PlayerIdRequest {
  string player_1_id = 1;
  string player_2_id = 2;
}

message GameReady {
  bool ready = 1;
  string player_1 = 2;
  string player_2 = 3;
  bool first_player = 4;
}

message PaddleRequest { string player_id = 1; }

message PaddlePosition {
  string player_id = 1;
  float y = 2;
}

message PaddleMovement {
  string player_id = 1;
  int32 key = 2;
}

message BallPosition {
  float x = 1;
  float y = 2;
  float xspeed = 3;
  float yspeed = 4;
  int32 player_1_score = 5;
  int32 player_2_score = 6;
}

service PongServer {
  rpc paddle_stream(PaddleRequest) returns (stream PaddlePosition);
  rpc ball_stream(PaddleRequest) returns (stream BallPosition);
  rpc move(PaddleMovement) returns (Empty);
  rpc initialize_game(UserName) returns (stream GameReady);
  rpc get_usernames(PlayerIdRequest) returns (UserNameMessage);
}